tools/crates/vendor/zerocopy/tests/ui-nightly/transmute-ptr-to-usize.stderr
error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> tests/ui-nightly/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `IntoBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `*const usize`
help: the trait `IntoBytes` is implemented for `usize`
  --> src/impls.rs
   |
   |     unsafe_impl!(usize: Immutable, TryFromBytes, FromZeros, FromBytes, IntoBytes);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `POINTER_VALUE::transmute`
  --> tests/ui-nightly/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              required by a bound in this function
   |                              required by this bound in `transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
